[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Samus/states/state_visor.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Scanner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scanner:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Scanner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scanner:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "lock_scanner_target"
length = 0.2

[sub_resource type="Animation" id=4]
resource_name = "scan"

[sub_resource type="Animation" id=5]
length = 0.2

[node name="Visor" type="Node2D"]
z_index = 999
z_as_relative = false
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/disable_scanner = SubResource( 1 )
anims/enable_scanner = SubResource( 2 )
anims/lock_scanner_target = SubResource( 3 )
anims/scan = SubResource( 4 )
anims/unlock_scanner_target = SubResource( 5 )

[node name="Scanner" type="Node2D" parent="."]

[node name="Lights" type="Node2D" parent="Scanner"]

[node name="Area2D" type="Area2D" parent="Scanner"]
collision_layer = 16
collision_mask = 65536

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Scanner/Area2D"]
light_mask = 0
polygon = PoolVector2Array( 0, 0, 704, 168, 704, -168 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="TintOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
light_mask = 10
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer"]

[connection signal="area_entered" from="Scanner/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Scanner/Area2D" to="." method="_on_Area2D_area_exited"]
